# buscaminas-leptos

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
.github/workflows/: static.yml
src/: lib.rs  main.rs  models.rs
